@@ -1,11 +1,11 @@
 package com.copyright.rup.dist.foreign.integration.lm.impl;
 
 import com.copyright.rup.dist.common.integration.camel.IProducer;
+import com.copyright.rup.dist.foreign.domain.Scenario;
 import com.copyright.rup.dist.foreign.integration.lm.api.ILmIntegrationService;
 import com.copyright.rup.dist.foreign.integration.lm.api.domain.ExternalUsage;
 import com.copyright.rup.dist.foreign.integration.lm.api.domain.ExternalUsageMessage;
 
-import com.google.common.collect.ImmutableMap;
 import com.google.common.collect.Iterables;
 
 import org.springframework.beans.factory.annotation.Autowired;
@@ -13,7 +13,11 @@ import org.springframework.beans.factory.annotation.Qualifier;
 import org.springframework.beans.factory.annotation.Value;
 import org.springframework.stereotype.Service;
 
+import java.time.OffsetDateTime;
+import java.time.format.DateTimeFormatter;
 import java.util.List;
+import java.util.Map;
+import java.util.Objects;
 
 /**
  * Implementation of {@link ILmIntegrationService}.
@@ -27,6 +31,9 @@ import java.util.List;
 @Service
 public class LmIntegrationService implements ILmIntegrationService {
 
+    private static final DateTimeFormatter DATE_TIME_FORMATTER =
+        DateTimeFormatter.ofPattern("yyyy-MM-dd HH:mm:ss.SSS Z");
+
     @Autowired
     @Qualifier("df.integration.externalUsageProducer")
     private IProducer<ExternalUsageMessage> externalUsageProducer;
@@ -35,9 +42,22 @@ public class LmIntegrationService implements ILmIntegrationService {
     private int batchSize;
 
     @Override
-    public void sendToLm(List<ExternalUsage> externalUsages) {
+    public void sendToLm(List<ExternalUsage> externalUsages, String scenarioId, String scenarioName,
+                         String productFamily, int numberOfMessages) {
         Iterables.partition(externalUsages, batchSize)
             .forEach(partition -> externalUsageProducer.send(
-                new ExternalUsageMessage(ImmutableMap.of("source", "FDA"), partition)));
+                new ExternalUsageMessage(Map.of(
+                    "source", "FDA",
+                    "scenarioId", Objects.requireNonNull(scenarioId),
+                    "scenarioName", Objects.requireNonNull(scenarioName),
+                    "productFamily", Objects.requireNonNull(productFamily),
+                    "numberOfMessages", numberOfMessages,
+                    "sendDate", DATE_TIME_FORMATTER.format(OffsetDateTime.now())),
+                    partition)));
+    }
+
+    @Override
+    public void sendToLm(List<ExternalUsage> externalUsages, Scenario scenario, int numberOfMessages) {
+        sendToLm(externalUsages, scenario.getId(), scenario.getName(), scenario.getProductFamily(), numberOfMessages);
     }
 }
